<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizationInfoContainer"
    style="@style/InfoFragment"
    tools:context=".fragments.info.OrganizationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Theme.Lmo.PrescriptionLightText"
        android:text="@string/prescribedBy" />

    <TextView
        android:id="@+id/doctorName"
        style="@style/Theme.Lmo.PrescriptionBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/sampleText" />

    <View style="@style/HorizontalDivider" />

    <TextView
        style="@style/Theme.Lmo.PrescriptionLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/organization" />

    <TextView
        android:id="@+id/organization"
        style="@style/Theme.Lmo.PrescriptionBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleText" />
</LinearLayout>