<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".FirstActivity">

    <Button
        android:id="@+id/LoginButton"
        style="@style/Theme.Lmo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/topTextView"
        style="@style/Theme.Lmo.WhiteMediumText"
        android:layout_width="319dp"
        android:layout_height="58dp"
        android:text="@string/ministryOfHealth"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTextView"
        app:srcCompat="@drawable/atoll_logo"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/companyLogo" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/Theme.Lmo.WhiteMediumText"
        android:layout_width="325dp"
        android:layout_height="93dp"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/Theme.Lmo.WhiteMediumText"
        android:layout_width="351dp"
        android:layout_height="124dp"
        android:text="@string/description"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>